apply plugin: 'java'
apply plugin: 'jacoco'
apply plugin: 'application'


mainClassName = 'Simulation.Main'

sourceCompatibility = 1.8
targetCompatibility = 1.8
version = '0.0.2'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'com.soartech:jsoar-core:4.1.3'
    //implementation 'com.github.CST-Group:WS3DProxy:0.0.1'
    //implementation 'ch.qos.logback:logback-classic:1.0.11' 
    implementation 'ch.qos.logback:logback-classic:1.3.6' 
    implementation 'com.fifesoft:rsyntaxtextarea:3.1.2'
    testImplementation     'junit:junit:4.13'
    
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
    	//configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }
    manifest {
      attributes(
        'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
        'Main-Class': mainClassName
      )
    }
}

/*
task uberJar(type: Jar) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    archiveClassifier = 'full'
    manifest {
      attributes(
        'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
        'Main-Class': mainClassName
      )
    }
    from sourceSets.main.output
    dependsOn configurations.runtimeClasspath
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }
}
artifacts
{
    archives uberJar
}
*/